force-app/main/default/objects/Quebec_Property_Usage__c/Quebec_Property_Usage__c.object-meta.xml
<CustomObject>
    <description>Enregistre l'utilisation du service Quebec Property Search pour les statistiques</description>
    <label>Quebec Property Usage</label>
    <nameField>
        <displayFormat>QPS-{0000000}</displayFormat>
        <label>Usage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quebec Property Usages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>