force-app/main/default/objects/Quebec_Property_Usage__c/fields/Municipality__c.field-meta.xml
<CustomField>
    <fullName>Municipality__c</fullName>
    <description>Code de la municipalité recherchée</description>
    <label>Municipality</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>