force-app/main/default/objects/Quebec_Property_Usage__c/fields/Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>Organization_Id__c</fullName>
    <description>ID de l'organisation Salesforce</description>
    <label>Organization ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>