force-app/main/default/objects/Quebec_Property_Usage__c/fields/Results_Count__c.field-meta.xml
<CustomField>
    <fullName>Results_Count__c</fullName>
    <description>Nombre de résultats retournés</description>
    <label>Results Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>