force-app/main/default/objects/Quebec_Property_Usage__c/fields/Search_Date__c.field-meta.xml
<CustomField>
    <fullName>Search_Date__c</fullName>
    <description>Date et heure de la recherche</description>
    <label>Search Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>