force-app/main/default/objects/Quebec_Property_Usage__c/fields/Search_Type__c.field-meta.xml
<CustomField>
    <fullName>Search_Type__c</fullName>
    <description>Type de recherche effectuée</description>
    <label>Search Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>address</fullName>
                <label>Address Search</label>
            </value>
            <value>
                <fullName>owner</fullName>
                <label>Owner Search</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>