force-app/main/default/objects/Quebec_Property_Usage__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Utilisateur ayant effectué la recherche</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quebec_Property_Usages</relationshipName>
    <type>Lookup</type>
</CustomField>